TP2/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    WS

Grammar

Rule 0     S' -> ProgramaInit
Rule 1     ProgramaInit -> Programa ENDMARKER
Rule 2     Programa -> Corpo
Rule 3     Programa -> Decls Corpo
Rule 4     Corpo -> Proc Newline
Rule 5     Corpo -> Corpo Proc Newline
Rule 6     Corpo -> Newline
Rule 7     Empty -> <empty>
Rule 8     Newline -> NEWLINE
Rule 9     Newline -> Empty
Rule 10    Dedent -> Dedent DEDENT
Rule 11    Dedent -> Empty
Rule 12    Decls -> Decl Newline
Rule 13    Decls -> Decls Decl Newline
Rule 14    Decl -> INTDec ID
Rule 15    Decl -> INTDec ID ATRIB NUM
Rule 16    Decl -> INTDec ID ATRIB Input
Rule 17    Decl -> INTDec ID LSQBRACKET NUM RSQBRACKET ATRIB ArrayValues
Rule 18    Decl -> INTDec ID LSQBRACKET NUM RSQBRACKET
Rule 19    Decl -> Def
Rule 20    Def -> DEF ID COLON Newline INDENT Corpo DEDENT
Rule 21    Def -> DEF ID COLON Newline INDENT Decls Corpo DEDENT
Rule 22    ArrayValues -> LCURLBRACKET ArrayIntValues RCURLBRACKET
Rule 23    ArrayIntValues -> ArrayIntValues , Expr
Rule 24    ArrayIntValues -> Expr
Rule 25    Proc -> Atrib
Rule 26    Proc -> Print
Rule 27    Proc -> If
Rule 28    Proc -> Cycle
Rule 29    Proc -> Call
Rule 30    Proc -> Assert
Rule 31    Call -> CALL
Rule 32    Assert -> ASSERT LCPARENT Cond RCPARENT
Rule 33    If -> IF LCPARENT Cond RCPARENT COLON Newline INDENT Corpo Dedent
Rule 34    If -> IF LCPARENT Cond RCPARENT COLON Newline INDENT Corpo Dedent ELSE COLON Newline INDENT Corpo DEDENT
Rule 35    Cycle -> While
Rule 36    Cycle -> DoWhile
Rule 37    DoWhile -> DO COLON Newline INDENT Corpo Dedent WHILE LCPARENT Cond RCPARENT NEWLINE
Rule 38    While -> WHILE LCPARENT Cond RCPARENT COLON Newline INDENT Corpo Dedent
Rule 39    Cond -> Expr GT Expr
Rule 40    Cond -> Expr LT Expr
Rule 41    Cond -> Expr GEQ Expr
Rule 42    Cond -> Expr LEQ Expr
Rule 43    Cond -> Expr EQUIV Expr
Rule 44    Cond -> Expr NEQ Expr
Rule 45    Cond -> Expr OR Expr
Rule 46    Cond -> Expr AND Expr
Rule 47    Cond -> NOT Cond
Rule 48    Atrib -> ID ATRIB Expr
Rule 49    Atrib -> ID ATRIB Input
Rule 50    Atrib -> ID INC
Rule 51    Atrib -> ID DEC
Rule 52    Atrib -> ID LSQBRACKET Expr RSQBRACKET ATRIB Expr
Rule 53    Print -> NonFormatted
Rule 54    NonFormatted -> PRINT LCPARENT Argument RCPARENT
Rule 55    Argument -> String
Rule 56    Argument -> Expr
Rule 57    Expr -> Var
Rule 58    Expr -> ExprIncDec
Rule 59    Expr -> NUM
Rule 60    Expr -> Expr SUM Expr
Rule 61    Expr -> Expr SUB Expr
Rule 62    Expr -> Expr MULT Expr
Rule 63    Expr -> Expr DIV Expr
Rule 64    Expr -> Expr MOD Expr
Rule 65    ExprIncDec -> ID INC
Rule 66    ExprIncDec -> ID DEC
Rule 67    Var -> ID
Rule 68    Var -> ID LSQBRACKET Expr RSQBRACKET
Rule 69    Input -> INPUT LCPARENT String RCPARENT
Rule 70    String -> QUOTE STRING QUOTE
Rule 71    String -> Empty

Terminals, with rules where they appear

,                    : 23
AND                  : 46
ASSERT               : 32
ATRIB                : 15 16 17 48 49 52
CALL                 : 31
COLON                : 20 21 33 34 34 37 38
DEC                  : 51 66
DEDENT               : 10 20 21 34
DEF                  : 20 21
DIV                  : 63
DO                   : 37
ELSE                 : 34
ENDMARKER            : 1
EQUIV                : 43
GEQ                  : 41
GT                   : 39
ID                   : 14 15 16 17 18 20 21 48 49 50 51 52 65 66 67 68
IF                   : 33 34
INC                  : 50 65
INDENT               : 20 21 33 34 34 37 38
INPUT                : 69
INTDec               : 14 15 16 17 18
LCPARENT             : 32 33 34 37 38 54 69
LCURLBRACKET         : 22
LEQ                  : 42
LSQBRACKET           : 17 18 52 68
LT                   : 40
MOD                  : 64
MULT                 : 62
NEQ                  : 44
NEWLINE              : 8 37
NOT                  : 47
NUM                  : 15 17 18 59
OR                   : 45
PRINT                : 54
QUOTE                : 70 70
RCPARENT             : 32 33 34 37 38 54 69
RCURLBRACKET         : 22
RSQBRACKET           : 17 18 52 68
STRING               : 70
SUB                  : 61
SUM                  : 60
WHILE                : 37 38
WS                   : 
error                : 

Nonterminals, with rules where they appear

Argument             : 54
ArrayIntValues       : 22 23
ArrayValues          : 17
Assert               : 30
Atrib                : 25
Call                 : 29
Cond                 : 32 33 34 37 38 47
Corpo                : 2 3 5 20 21 33 34 34 37 38
Cycle                : 28
Decl                 : 12 13
Decls                : 3 13 21
Dedent               : 10 33 34 37 38
Def                  : 19
DoWhile              : 36
Empty                : 9 11 71
Expr                 : 23 24 39 39 40 40 41 41 42 42 43 43 44 44 45 45 46 46 48 52 52 56 60 60 61 61 62 62 63 63 64 64 68
ExprIncDec           : 58
If                   : 27
Input                : 16 49
Newline              : 4 5 6 12 13 20 21 33 34 34 37 38
NonFormatted         : 53
Print                : 26
Proc                 : 4 5
Programa             : 1
ProgramaInit         : 0
String               : 55 69
Var                  : 57
While                : 35

Parsing method: LALR

state 0

    (0) S' -> . ProgramaInit
    (1) ProgramaInit -> . Programa ENDMARKER
    (2) Programa -> . Corpo
    (3) Programa -> . Decls Corpo
    (4) Corpo -> . Proc Newline
    (5) Corpo -> . Corpo Proc Newline
    (6) Corpo -> . Newline
    (12) Decls -> . Decl Newline
    (13) Decls -> . Decls Decl Newline
    (25) Proc -> . Atrib
    (26) Proc -> . Print
    (27) Proc -> . If
    (28) Proc -> . Cycle
    (29) Proc -> . Call
    (30) Proc -> . Assert
    (8) Newline -> . NEWLINE
    (9) Newline -> . Empty
    (14) Decl -> . INTDec ID
    (15) Decl -> . INTDec ID ATRIB NUM
    (16) Decl -> . INTDec ID ATRIB Input
    (17) Decl -> . INTDec ID LSQBRACKET NUM RSQBRACKET ATRIB ArrayValues
    (18) Decl -> . INTDec ID LSQBRACKET NUM RSQBRACKET
    (19) Decl -> . Def
    (48) Atrib -> . ID ATRIB Expr
    (49) Atrib -> . ID ATRIB Input
    (50) Atrib -> . ID INC
    (51) Atrib -> . ID DEC
    (52) Atrib -> . ID LSQBRACKET Expr RSQBRACKET ATRIB Expr
    (53) Print -> . NonFormatted
    (33) If -> . IF LCPARENT Cond RCPARENT COLON Newline INDENT Corpo Dedent
    (34) If -> . IF LCPARENT Cond RCPARENT COLON Newline INDENT Corpo Dedent ELSE COLON Newline INDENT Corpo DEDENT
    (35) Cycle -> . While
    (36) Cycle -> . DoWhile
    (31) Call -> . CALL
    (32) Assert -> . ASSERT LCPARENT Cond RCPARENT
    (7) Empty -> .
    (20) Def -> . DEF ID COLON Newline INDENT Corpo DEDENT
    (21) Def -> . DEF ID COLON Newline INDENT Decls Corpo DEDENT
    (54) NonFormatted -> . PRINT LCPARENT Argument RCPARENT
    (38) While -> . WHILE LCPARENT Cond RCPARENT COLON Newline INDENT Corpo Dedent
    (37) DoWhile -> . DO COLON Newline INDENT Corpo Dedent WHILE LCPARENT Cond RCPARENT NEWLINE

  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for CALL resolved as shift
  ! shift/reduce conflict for ASSERT resolved as shift
  ! shift/reduce conflict for PRINT resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for DO resolved as shift
    NEWLINE         shift and go to state 14
    INTDec          shift and go to state 16
    ID              shift and go to state 17
    IF              shift and go to state 20
    CALL            shift and go to state 23
    ASSERT          shift and go to state 24
    ENDMARKER       reduce using rule 7 (Empty -> .)
    DEF             shift and go to state 25
    PRINT           shift and go to state 26
    WHILE           shift and go to state 27
    DO              shift and go to state 28

  ! ID              [ reduce using rule 7 (Empty -> .) ]
  ! IF              [ reduce using rule 7 (Empty -> .) ]
  ! CALL            [ reduce using rule 7 (Empty -> .) ]
  ! ASSERT          [ reduce using rule 7 (Empty -> .) ]
  ! PRINT           [ reduce using rule 7 (Empty -> .) ]
  ! WHILE           [ reduce using rule 7 (Empty -> .) ]
  ! DO              [ reduce using rule 7 (Empty -> .) ]

    ProgramaInit                   shift and go to state 1
    Programa                       shift and go to state 2
    Corpo                          shift and go to state 3
    Decls                          shift and go to state 4
    Proc                           shift and go to state 5
    Newline                        shift and go to state 6
    Decl                           shift and go to state 7
    Atrib                          shift and go to state 8
    Print                          shift and go to state 9
    If                             shift and go to state 10
    Cycle                          shift and go to state 11
    Call                           shift and go to state 12
    Assert                         shift and go to state 13
    Empty                          shift and go to state 15
    Def                            shift and go to state 18
    NonFormatted                   shift and go to state 19
    While                          shift and go to state 21
    DoWhile                        shift and go to state 22

state 1

    (0) S' -> ProgramaInit .



state 2

    (1) ProgramaInit -> Programa . ENDMARKER

    ENDMARKER       shift and go to state 29


state 3

    (2) Programa -> Corpo .
    (5) Corpo -> Corpo . Proc Newline
    (25) Proc -> . Atrib
    (26) Proc -> . Print
    (27) Proc -> . If
    (28) Proc -> . Cycle
    (29) Proc -> . Call
    (30) Proc -> . Assert
    (48) Atrib -> . ID ATRIB Expr
    (49) Atrib -> . ID ATRIB Input
    (50) Atrib -> . ID INC
    (51) Atrib -> . ID DEC
    (52) Atrib -> . ID LSQBRACKET Expr RSQBRACKET ATRIB Expr
    (53) Print -> . NonFormatted
    (33) If -> . IF LCPARENT Cond RCPARENT COLON Newline INDENT Corpo Dedent
    (34) If -> . IF LCPARENT Cond RCPARENT COLON Newline INDENT Corpo Dedent ELSE COLON Newline INDENT Corpo DEDENT
    (35) Cycle -> . While
    (36) Cycle -> . DoWhile
    (31) Call -> . CALL
    (32) Assert -> . ASSERT LCPARENT Cond RCPARENT
    (54) NonFormatted -> . PRINT LCPARENT Argument RCPARENT
    (38) While -> . WHILE LCPARENT Cond RCPARENT COLON Newline INDENT Corpo Dedent
    (37) DoWhile -> . DO COLON Newline INDENT Corpo Dedent WHILE LCPARENT Cond RCPARENT NEWLINE

    ENDMARKER       reduce using rule 2 (Programa -> Corpo .)
    ID              shift and go to state 17
    IF              shift and go to state 20
    CALL            shift and go to state 23
    ASSERT          shift and go to state 24
    PRINT           shift and go to state 26
    WHILE           shift and go to state 27
    DO              shift and go to state 28

    Proc                           shift and go to state 30
    Atrib                          shift and go to state 8
    Print                          shift and go to state 9
    If                             shift and go to state 10
    Cycle                          shift and go to state 11
    Call                           shift and go to state 12
    Assert                         shift and go to state 13
    NonFormatted                   shift and go to state 19
    While                          shift and go to state 21
    DoWhile                        shift and go to state 22

state 4

    (3) Programa -> Decls . Corpo
    (13) Decls -> Decls . Decl Newline
    (4) Corpo -> . Proc Newline
    (5) Corpo -> . Corpo Proc Newline
    (6) Corpo -> . Newline
    (14) Decl -> . INTDec ID
    (15) Decl -> . INTDec ID ATRIB NUM
    (16) Decl -> . INTDec ID ATRIB Input
    (17) Decl -> . INTDec ID LSQBRACKET NUM RSQBRACKET ATRIB ArrayValues
    (18) Decl -> . INTDec ID LSQBRACKET NUM RSQBRACKET
    (19) Decl -> . Def
    (25) Proc -> . Atrib
    (26) Proc -> . Print
    (27) Proc -> . If
    (28) Proc -> . Cycle
    (29) Proc -> . Call
    (30) Proc -> . Assert
    (8) Newline -> . NEWLINE
    (9) Newline -> . Empty
    (20) Def -> . DEF ID COLON Newline INDENT Corpo DEDENT
    (21) Def -> . DEF ID COLON Newline INDENT Decls Corpo DEDENT
    (48) Atrib -> . ID ATRIB Expr
    (49) Atrib -> . ID ATRIB Input
    (50) Atrib -> . ID INC
    (51) Atrib -> . ID DEC
    (52) Atrib -> . ID LSQBRACKET Expr RSQBRACKET ATRIB Expr
    (53) Print -> . NonFormatted
    (33) If -> . IF LCPARENT Cond RCPARENT COLON Newline INDENT Corpo Dedent
    (34) If -> . IF LCPARENT Cond RCPARENT COLON Newline INDENT Corpo Dedent ELSE COLON Newline INDENT Corpo DEDENT
    (35) Cycle -> . While
    (36) Cycle -> . DoWhile
    (31) Call -> . CALL
    (32) Assert -> . ASSERT LCPARENT Cond RCPARENT
    (7) Empty -> .
    (54) NonFormatted -> . PRINT LCPARENT Argument RCPARENT
    (38) While -> . WHILE LCPARENT Cond RCPARENT COLON Newline INDENT Corpo Dedent
    (37) DoWhile -> . DO COLON Newline INDENT Corpo Dedent WHILE LCPARENT Cond RCPARENT NEWLINE

  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for CALL resolved as shift
  ! shift/reduce conflict for ASSERT resolved as shift
  ! shift/reduce conflict for PRINT resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for DO resolved as shift
    INTDec          shift and go to state 16
    NEWLINE         shift and go to state 14
    DEF             shift and go to state 25
    ID              shift and go to state 17
    IF              shift and go to state 20
    CALL            shift and go to state 23
    ASSERT          shift and go to state 24
    ENDMARKER       reduce using rule 7 (Empty -> .)
    PRINT           shift and go to state 26
    WHILE           shift and go to state 27
    DO              shift and go to state 28

  ! ID              [ reduce using rule 7 (Empty -> .) ]
  ! IF              [ reduce using rule 7 (Empty -> .) ]
  ! CALL            [ reduce using rule 7 (Empty -> .) ]
  ! ASSERT          [ reduce using rule 7 (Empty -> .) ]
  ! PRINT           [ reduce using rule 7 (Empty -> .) ]
  ! WHILE           [ reduce using rule 7 (Empty -> .) ]
  ! DO              [ reduce using rule 7 (Empty -> .) ]

    Corpo                          shift and go to state 31
    Decl                           shift and go to state 32
    Newline                        shift and go to state 6
    Proc                           shift and go to state 5
    Def                            shift and go to state 18
    Atrib                          shift and go to state 8
    Print                          shift and go to state 9
    If                             shift and go to state 10
    Cycle                          shift and go to state 11
    Call                           shift and go to state 12
    Assert                         shift and go to state 13
    Empty                          shift and go to state 15
    NonFormatted                   shift and go to state 19
    While                          shift and go to state 21
    DoWhile                        shift and go to state 22

state 5

    (4) Corpo -> Proc . Newline
    (8) Newline -> . NEWLINE
    (9) Newline -> . Empty
    (7) Empty -> .

  ! shift/reduce conflict for NEWLINE resolved as shift
    NEWLINE         shift and go to state 14
    ID              reduce using rule 7 (Empty -> .)
    IF              reduce using rule 7 (Empty -> .)
    CALL            reduce using rule 7 (Empty -> .)
    ASSERT          reduce using rule 7 (Empty -> .)
    PRINT           reduce using rule 7 (Empty -> .)
    WHILE           reduce using rule 7 (Empty -> .)
    DO              reduce using rule 7 (Empty -> .)
    ENDMARKER       reduce using rule 7 (Empty -> .)
    DEDENT          reduce using rule 7 (Empty -> .)
    ELSE            reduce using rule 7 (Empty -> .)

  ! NEWLINE         [ reduce using rule 7 (Empty -> .) ]

    Newline                        shift and go to state 33
    Empty                          shift and go to state 15

state 6

    (6) Corpo -> Newline .

    ID              reduce using rule 6 (Corpo -> Newline .)
    IF              reduce using rule 6 (Corpo -> Newline .)
    CALL            reduce using rule 6 (Corpo -> Newline .)
    ASSERT          reduce using rule 6 (Corpo -> Newline .)
    PRINT           reduce using rule 6 (Corpo -> Newline .)
    WHILE           reduce using rule 6 (Corpo -> Newline .)
    DO              reduce using rule 6 (Corpo -> Newline .)
    ENDMARKER       reduce using rule 6 (Corpo -> Newline .)
    DEDENT          reduce using rule 6 (Corpo -> Newline .)
    ELSE            reduce using rule 6 (Corpo -> Newline .)
    NEWLINE         reduce using rule 6 (Corpo -> Newline .)


state 7

    (12) Decls -> Decl . Newline
    (8) Newline -> . NEWLINE
    (9) Newline -> . Empty
    (7) Empty -> .

  ! shift/reduce conflict for NEWLINE resolved as shift
    NEWLINE         shift and go to state 14
    INTDec          reduce using rule 7 (Empty -> .)
    DEF             reduce using rule 7 (Empty -> .)
    ID              reduce using rule 7 (Empty -> .)
    IF              reduce using rule 7 (Empty -> .)
    CALL            reduce using rule 7 (Empty -> .)
    ASSERT          reduce using rule 7 (Empty -> .)
    PRINT           reduce using rule 7 (Empty -> .)
    WHILE           reduce using rule 7 (Empty -> .)
    DO              reduce using rule 7 (Empty -> .)
    ENDMARKER       reduce using rule 7 (Empty -> .)
    DEDENT          reduce using rule 7 (Empty -> .)

  ! NEWLINE         [ reduce using rule 7 (Empty -> .) ]

    Newline                        shift and go to state 34
    Empty                          shift and go to state 15

state 8

    (25) Proc -> Atrib .

    NEWLINE         reduce using rule 25 (Proc -> Atrib .)
    ID              reduce using rule 25 (Proc -> Atrib .)
    IF              reduce using rule 25 (Proc -> Atrib .)
    CALL            reduce using rule 25 (Proc -> Atrib .)
    ASSERT          reduce using rule 25 (Proc -> Atrib .)
    PRINT           reduce using rule 25 (Proc -> Atrib .)
    WHILE           reduce using rule 25 (Proc -> Atrib .)
    DO              reduce using rule 25 (Proc -> Atrib .)
    ENDMARKER       reduce using rule 25 (Proc -> Atrib .)
    DEDENT          reduce using rule 25 (Proc -> Atrib .)
    ELSE            reduce using rule 25 (Proc -> Atrib .)


state 9

    (26) Proc -> Print .

    NEWLINE         reduce using rule 26 (Proc -> Print .)
    ID              reduce using rule 26 (Proc -> Print .)
    IF              reduce using rule 26 (Proc -> Print .)
    CALL            reduce using rule 26 (Proc -> Print .)
    ASSERT          reduce using rule 26 (Proc -> Print .)
    PRINT           reduce using rule 26 (Proc -> Print .)
    WHILE           reduce using rule 26 (Proc -> Print .)
    DO              reduce using rule 26 (Proc -> Print .)
    ENDMARKER       reduce using rule 26 (Proc -> Print .)
    DEDENT          reduce using rule 26 (Proc -> Print .)
    ELSE            reduce using rule 26 (Proc -> Print .)


state 10

    (27) Proc -> If .

    NEWLINE         reduce using rule 27 (Proc -> If .)
    ID              reduce using rule 27 (Proc -> If .)
    IF              reduce using rule 27 (Proc -> If .)
    CALL            reduce using rule 27 (Proc -> If .)
    ASSERT          reduce using rule 27 (Proc -> If .)
    PRINT           reduce using rule 27 (Proc -> If .)
    WHILE           reduce using rule 27 (Proc -> If .)
    DO              reduce using rule 27 (Proc -> If .)
    ENDMARKER       reduce using rule 27 (Proc -> If .)
    DEDENT          reduce using rule 27 (Proc -> If .)
    ELSE            reduce using rule 27 (Proc -> If .)


state 11

    (28) Proc -> Cycle .

    NEWLINE         reduce using rule 28 (Proc -> Cycle .)
    ID              reduce using rule 28 (Proc -> Cycle .)
    IF              reduce using rule 28 (Proc -> Cycle .)
    CALL            reduce using rule 28 (Proc -> Cycle .)
    ASSERT          reduce using rule 28 (Proc -> Cycle .)
    PRINT           reduce using rule 28 (Proc -> Cycle .)
    WHILE           reduce using rule 28 (Proc -> Cycle .)
    DO              reduce using rule 28 (Proc -> Cycle .)
    ENDMARKER       reduce using rule 28 (Proc -> Cycle .)
    DEDENT          reduce using rule 28 (Proc -> Cycle .)
    ELSE            reduce using rule 28 (Proc -> Cycle .)


state 12

    (29) Proc -> Call .

    NEWLINE         reduce using rule 29 (Proc -> Call .)
    ID              reduce using rule 29 (Proc -> Call .)
    IF              reduce using rule 29 (Proc -> Call .)
    CALL            reduce using rule 29 (Proc -> Call .)
    ASSERT          reduce using rule 29 (Proc -> Call .)
    PRINT           reduce using rule 29 (Proc -> Call .)
    WHILE           reduce using rule 29 (Proc -> Call .)
    DO              reduce using rule 29 (Proc -> Call .)
    ENDMARKER       reduce using rule 29 (Proc -> Call .)
    DEDENT          reduce using rule 29 (Proc -> Call .)
    ELSE            reduce using rule 29 (Proc -> Call .)


state 13

    (30) Proc -> Assert .

    NEWLINE         reduce using rule 30 (Proc -> Assert .)
    ID              reduce using rule 30 (Proc -> Assert .)
    IF              reduce using rule 30 (Proc -> Assert .)
    CALL            reduce using rule 30 (Proc -> Assert .)
    ASSERT          reduce using rule 30 (Proc -> Assert .)
    PRINT           reduce using rule 30 (Proc -> Assert .)
    WHILE           reduce using rule 30 (Proc -> Assert .)
    DO              reduce using rule 30 (Proc -> Assert .)
    ENDMARKER       reduce using rule 30 (Proc -> Assert .)
    DEDENT          reduce using rule 30 (Proc -> Assert .)
    ELSE            reduce using rule 30 (Proc -> Assert .)


state 14

    (8) Newline -> NEWLINE .

    ID              reduce using rule 8 (Newline -> NEWLINE .)
    IF              reduce using rule 8 (Newline -> NEWLINE .)
    CALL            reduce using rule 8 (Newline -> NEWLINE .)
    ASSERT          reduce using rule 8 (Newline -> NEWLINE .)
    PRINT           reduce using rule 8 (Newline -> NEWLINE .)
    WHILE           reduce using rule 8 (Newline -> NEWLINE .)
    DO              reduce using rule 8 (Newline -> NEWLINE .)
    ENDMARKER       reduce using rule 8 (Newline -> NEWLINE .)
    DEDENT          reduce using rule 8 (Newline -> NEWLINE .)
    ELSE            reduce using rule 8 (Newline -> NEWLINE .)
    NEWLINE         reduce using rule 8 (Newline -> NEWLINE .)
    INTDec          reduce using rule 8 (Newline -> NEWLINE .)
    DEF             reduce using rule 8 (Newline -> NEWLINE .)
    INDENT          reduce using rule 8 (Newline -> NEWLINE .)


state 15

    (9) Newline -> Empty .

    ID              reduce using rule 9 (Newline -> Empty .)
    IF              reduce using rule 9 (Newline -> Empty .)
    CALL            reduce using rule 9 (Newline -> Empty .)
    ASSERT          reduce using rule 9 (Newline -> Empty .)
    PRINT           reduce using rule 9 (Newline -> Empty .)
    WHILE           reduce using rule 9 (Newline -> Empty .)
    DO              reduce using rule 9 (Newline -> Empty .)
    ENDMARKER       reduce using rule 9 (Newline -> Empty .)
    DEDENT          reduce using rule 9 (Newline -> Empty .)
    ELSE            reduce using rule 9 (Newline -> Empty .)
    NEWLINE         reduce using rule 9 (Newline -> Empty .)
    INTDec          reduce using rule 9 (Newline -> Empty .)
    DEF             reduce using rule 9 (Newline -> Empty .)
    INDENT          reduce using rule 9 (Newline -> Empty .)


state 16

    (14) Decl -> INTDec . ID
    (15) Decl -> INTDec . ID ATRIB NUM
    (16) Decl -> INTDec . ID ATRIB Input
    (17) Decl -> INTDec . ID LSQBRACKET NUM RSQBRACKET ATRIB ArrayValues
    (18) Decl -> INTDec . ID LSQBRACKET NUM RSQBRACKET

    ID              shift and go to state 35


state 17

    (48) Atrib -> ID . ATRIB Expr
    (49) Atrib -> ID . ATRIB Input
    (50) Atrib -> ID . INC
    (51) Atrib -> ID . DEC
    (52) Atrib -> ID . LSQBRACKET Expr RSQBRACKET ATRIB Expr

    ATRIB           shift and go to state 36
    INC             shift and go to state 37
    DEC             shift and go to state 38
    LSQBRACKET      shift and go to state 39


state 18

    (19) Decl -> Def .

    NEWLINE         reduce using rule 19 (Decl -> Def .)
    INTDec          reduce using rule 19 (Decl -> Def .)
    DEF             reduce using rule 19 (Decl -> Def .)
    ID              reduce using rule 19 (Decl -> Def .)
    IF              reduce using rule 19 (Decl -> Def .)
    CALL            reduce using rule 19 (Decl -> Def .)
    ASSERT          reduce using rule 19 (Decl -> Def .)
    PRINT           reduce using rule 19 (Decl -> Def .)
    WHILE           reduce using rule 19 (Decl -> Def .)
    DO              reduce using rule 19 (Decl -> Def .)
    ENDMARKER       reduce using rule 19 (Decl -> Def .)
    DEDENT          reduce using rule 19 (Decl -> Def .)


state 19

    (53) Print -> NonFormatted .

    NEWLINE         reduce using rule 53 (Print -> NonFormatted .)
    ID              reduce using rule 53 (Print -> NonFormatted .)
    IF              reduce using rule 53 (Print -> NonFormatted .)
    CALL            reduce using rule 53 (Print -> NonFormatted .)
    ASSERT          reduce using rule 53 (Print -> NonFormatted .)
    PRINT           reduce using rule 53 (Print -> NonFormatted .)
    WHILE           reduce using rule 53 (Print -> NonFormatted .)
    DO              reduce using rule 53 (Print -> NonFormatted .)
    ENDMARKER       reduce using rule 53 (Print -> NonFormatted .)
    DEDENT          reduce using rule 53 (Print -> NonFormatted .)
    ELSE            reduce using rule 53 (Print -> NonFormatted .)


state 20

    (33) If -> IF . LCPARENT Cond RCPARENT COLON Newline INDENT Corpo Dedent
    (34) If -> IF . LCPARENT Cond RCPARENT COLON Newline INDENT Corpo Dedent ELSE COLON Newline INDENT Corpo DEDENT

    LCPARENT        shift and go to state 40


state 21

    (35) Cycle -> While .

    NEWLINE         reduce using rule 35 (Cycle -> While .)
    ID              reduce using rule 35 (Cycle -> While .)
    IF              reduce using rule 35 (Cycle -> While .)
    CALL            reduce using rule 35 (Cycle -> While .)
    ASSERT          reduce using rule 35 (Cycle -> While .)
    PRINT           reduce using rule 35 (Cycle -> While .)
    WHILE           reduce using rule 35 (Cycle -> While .)
    DO              reduce using rule 35 (Cycle -> While .)
    ENDMARKER       reduce using rule 35 (Cycle -> While .)
    DEDENT          reduce using rule 35 (Cycle -> While .)
    ELSE            reduce using rule 35 (Cycle -> While .)


state 22

    (36) Cycle -> DoWhile .

    NEWLINE         reduce using rule 36 (Cycle -> DoWhile .)
    ID              reduce using rule 36 (Cycle -> DoWhile .)
    IF              reduce using rule 36 (Cycle -> DoWhile .)
    CALL            reduce using rule 36 (Cycle -> DoWhile .)
    ASSERT          reduce using rule 36 (Cycle -> DoWhile .)
    PRINT           reduce using rule 36 (Cycle -> DoWhile .)
    WHILE           reduce using rule 36 (Cycle -> DoWhile .)
    DO              reduce using rule 36 (Cycle -> DoWhile .)
    ENDMARKER       reduce using rule 36 (Cycle -> DoWhile .)
    DEDENT          reduce using rule 36 (Cycle -> DoWhile .)
    ELSE            reduce using rule 36 (Cycle -> DoWhile .)


state 23

    (31) Call -> CALL .

    NEWLINE         reduce using rule 31 (Call -> CALL .)
    ID              reduce using rule 31 (Call -> CALL .)
    IF              reduce using rule 31 (Call -> CALL .)
    CALL            reduce using rule 31 (Call -> CALL .)
    ASSERT          reduce using rule 31 (Call -> CALL .)
    PRINT           reduce using rule 31 (Call -> CALL .)
    WHILE           reduce using rule 31 (Call -> CALL .)
    DO              reduce using rule 31 (Call -> CALL .)
    ENDMARKER       reduce using rule 31 (Call -> CALL .)
    DEDENT          reduce using rule 31 (Call -> CALL .)
    ELSE            reduce using rule 31 (Call -> CALL .)


state 24

    (32) Assert -> ASSERT . LCPARENT Cond RCPARENT

    LCPARENT        shift and go to state 41


state 25

    (20) Def -> DEF . ID COLON Newline INDENT Corpo DEDENT
    (21) Def -> DEF . ID COLON Newline INDENT Decls Corpo DEDENT

    ID              shift and go to state 42


state 26

    (54) NonFormatted -> PRINT . LCPARENT Argument RCPARENT

    LCPARENT        shift and go to state 43


state 27

    (38) While -> WHILE . LCPARENT Cond RCPARENT COLON Newline INDENT Corpo Dedent

    LCPARENT        shift and go to state 44


state 28

    (37) DoWhile -> DO . COLON Newline INDENT Corpo Dedent WHILE LCPARENT Cond RCPARENT NEWLINE

    COLON           shift and go to state 45


state 29

    (1) ProgramaInit -> Programa ENDMARKER .

    $end            reduce using rule 1 (ProgramaInit -> Programa ENDMARKER .)


state 30

    (5) Corpo -> Corpo Proc . Newline
    (8) Newline -> . NEWLINE
    (9) Newline -> . Empty
    (7) Empty -> .

  ! shift/reduce conflict for NEWLINE resolved as shift
    NEWLINE         shift and go to state 14
    ID              reduce using rule 7 (Empty -> .)
    IF              reduce using rule 7 (Empty -> .)
    CALL            reduce using rule 7 (Empty -> .)
    ASSERT          reduce using rule 7 (Empty -> .)
    PRINT           reduce using rule 7 (Empty -> .)
    WHILE           reduce using rule 7 (Empty -> .)
    DO              reduce using rule 7 (Empty -> .)
    ENDMARKER       reduce using rule 7 (Empty -> .)
    DEDENT          reduce using rule 7 (Empty -> .)
    ELSE            reduce using rule 7 (Empty -> .)

  ! NEWLINE         [ reduce using rule 7 (Empty -> .) ]

    Newline                        shift and go to state 46
    Empty                          shift and go to state 15

state 31

    (3) Programa -> Decls Corpo .
    (5) Corpo -> Corpo . Proc Newline
    (25) Proc -> . Atrib
    (26) Proc -> . Print
    (27) Proc -> . If
    (28) Proc -> . Cycle
    (29) Proc -> . Call
    (30) Proc -> . Assert
    (48) Atrib -> . ID ATRIB Expr
    (49) Atrib -> . ID ATRIB Input
    (50) Atrib -> . ID INC
    (51) Atrib -> . ID DEC
    (52) Atrib -> . ID LSQBRACKET Expr RSQBRACKET ATRIB Expr
    (53) Print -> . NonFormatted
    (33) If -> . IF LCPARENT Cond RCPARENT COLON Newline INDENT Corpo Dedent
    (34) If -> . IF LCPARENT Cond RCPARENT COLON Newline INDENT Corpo Dedent ELSE COLON Newline INDENT Corpo DEDENT
    (35) Cycle -> . While
    (36) Cycle -> . DoWhile
    (31) Call -> . CALL
    (32) Assert -> . ASSERT LCPARENT Cond RCPARENT
    (54) NonFormatted -> . PRINT LCPARENT Argument RCPARENT
    (38) While -> . WHILE LCPARENT Cond RCPARENT COLON Newline INDENT Corpo Dedent
    (37) DoWhile -> . DO COLON Newline INDENT Corpo Dedent WHILE LCPARENT Cond RCPARENT NEWLINE

    ENDMARKER       reduce using rule 3 (Programa -> Decls Corpo .)
    ID              shift and go to state 17
    IF              shift and go to state 20
    CALL            shift and go to state 23
    ASSERT          shift and go to state 24
    PRINT           shift and go to state 26
    WHILE           shift and go to state 27
    DO              shift and go to state 28
